# Peano-Fork

./: .autotools  .gitignore  .gitlab-ci.yml  .project  COPY  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.in  daily-build.sh  libtool  pyproject.toml  result.txt
poetry/scripts/: pyproject.toml
poetry/scripts/scripts/: scripts.py
project/compute_graph/: README.md  code_gen.py  code_gen_test.py  errors.py  graph.py  helpers.py  kernel.py  local_types.py  main.py  node.py  ops.py  primative_nodes.py  pyproject.toml  test_node.py
project/compute_graph/AST/: _ast.cfg  ast_node_base.py  ast_nodes.g.py  ast_nodes_g.py  build_ast.py  test_build_ast.py  transformer.g.py  transformer_g.py
project/compute_graph/compute_graph/: code_gen.py  code_gen_test.py  errors.py  helpers.py  kernel.py  local_types.py  main.py  node.py  ops.py  primative_nodes.py  test_node.py  transform.py
project/results/: pyproject.toml
project/results/compile_times/: results.md
project/results/exahype/: analysis.py  results.csv
project/results/kernel_compare/: analysis.py
src/: .gitignore  Makefile.am  Makefile.in  config.h.in~  peano.doxygen-configuration
src/applications4/grid/: Makefile  MyObserver.cpp  MyObserver.h  main.cpp
src/convert/: Makefile.am  convert.cpp
src/convert/.deps/: convert-convert.Po  convert_debug-convert.Po
src/convert/data/: DataSet.cpp  DataSet.h  PatchData.cpp  PatchData.h  Variable.cpp  Variable.h
src/convert/filter/: ConvertTreeIdIntoDataField.cpp  ConvertTreeIdIntoDataField.h  Copy.cpp  Copy.h  Filter.h  Intersection.cpp  Intersection.h  SelectValue.cpp  SelectValue.h  SeparateResolutions.cpp  SeparateResolutions.h
src/convert/input/: MetaFileReader.h  Parser.cpp  Parser.h  PatchFileReader.h  PeanoTextPatchFileReader.cpp  PeanoTextPatchFileReader.h
src/convert/output/: PeanoWriter.cpp  PeanoWriter.h  VTUWriter.cpp  VTUWriter.h  Writer.h
src/exahype2/: EnclaveBookkeeping.cpp  EnclaveBookkeeping.h  EnclaveGPUTask.cpp  EnclaveGPUTask.h  EnclaveOpenMPGPUTask.cpp  EnclaveOpenMPGPUTask.h  EnclaveTask.cpp  EnclaveTask.h  LoadBalancingConfiguration.cpp  LoadBalancingConfiguration.h  Makefile  Makefile.am  Makefile.in  NonCriticalAssertions.cpp  NonCriticalAssertions.h  PatchUtils.cpp  PatchUtils.h  PlotFilter.cpp  PlotFilter.h  RefinementControl.cpp  RefinementControl.h  SmartEnclaveTask.cpp  SmartEnclaveTask.h  Solver.h  TimeStepping.cpp  TimeStepping.h  UnitTests.cpp  UnitTests.h  UserInterface.cpp  UserInterface.h
src/exahype2/.deps/: libExaHyPE2Core2d_a-EnclaveBookkeeping.Po  libExaHyPE2Core2d_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core2d_a-EnclaveTask.Po  libExaHyPE2Core2d_a-NonCriticalAssertions.Po  libExaHyPE2Core2d_a-PatchUtils.Po  libExaHyPE2Core2d_a-RefinementControl.Po  libExaHyPE2Core2d_a-UserInterface.Po  libExaHyPE2Core2d_asserts_a-EnclaveBookkeeping.Po  libExaHyPE2Core2d_asserts_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core2d_asserts_a-EnclaveTask.Po  libExaHyPE2Core2d_asserts_a-NonCriticalAssertions.Po  libExaHyPE2Core2d_asserts_a-PatchUtils.Po  libExaHyPE2Core2d_asserts_a-RefinementControl.Po  libExaHyPE2Core2d_asserts_a-UserInterface.Po  libExaHyPE2Core2d_debug_a-EnclaveBookkeeping.Po  libExaHyPE2Core2d_debug_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core2d_debug_a-EnclaveTask.Po  libExaHyPE2Core2d_debug_a-NonCriticalAssertions.Po  libExaHyPE2Core2d_debug_a-PatchUtils.Po  libExaHyPE2Core2d_debug_a-RefinementControl.Po  libExaHyPE2Core2d_debug_a-UserInterface.Po  libExaHyPE2Core2d_trace_a-EnclaveBookkeeping.Po  libExaHyPE2Core2d_trace_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core2d_trace_a-EnclaveTask.Po  libExaHyPE2Core2d_trace_a-NonCriticalAssertions.Po  libExaHyPE2Core2d_trace_a-PatchUtils.Po  libExaHyPE2Core2d_trace_a-RefinementControl.Po  libExaHyPE2Core2d_trace_a-UserInterface.Po  libExaHyPE2Core3d_a-EnclaveBookkeeping.Po  libExaHyPE2Core3d_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core3d_a-EnclaveTask.Po  libExaHyPE2Core3d_a-NonCriticalAssertions.Po  libExaHyPE2Core3d_a-PatchUtils.Po  libExaHyPE2Core3d_a-RefinementControl.Po  libExaHyPE2Core3d_a-UserInterface.Po  libExaHyPE2Core3d_asserts_a-EnclaveBookkeeping.Po  libExaHyPE2Core3d_asserts_a-EnclaveOpenMPGPUTask.Po  libExaHyPE2Core3d_asserts_a-EnclaveTask.Po  libExaHyPE2Core3d_asserts_a-NonCriticalAssertions.Po  libExaHyPE2Core3d_asserts_a-PatchUtils.Po  (+16 more)
src/exahype2/aderdg/: BoundaryConditions.h  CorrectorAoS.cpp  CorrectorAoS.h  Generic.cpp  Generic.cpph  Generic.h  KernelUtils.cpp  KernelUtils.h  Makefile  PredictorAoS.cpp  PredictorAoS.h  RiemannAoS.cpp  RiemannAoS.h  RusanovNonlinearAoS.cpp  RusanovNonlinearAoS.h
src/exahype2/dg/: 1  RusanovNonlinearAoS.cpp
src/exahype2/fv/: BoundaryConditions.cpp  BoundaryConditions.h  Generic.cpp  Generic.h  Rusanov.cpp  Rusanov.cpph  Rusanov.h
src/examples/delta/: CellData.cpp  CellData.h  CompositeMapping.cpp  CompositeMapping.h  InitData.cpp  InitData.h  Makefile.am  Mapping.h  MyObserver.cpp  MyObserver.h  PeanoFormatCellDataPlotter.cpp  PeanoFormatCellDataPlotter.h  delta.md  main.cpp
src/examples/grid/: .gitignore  Makefile  Makefile.am  MyObserver.cpp  MyObserver.h  main.cpp
src/examples/integerdiffusionthroughfaces/: .gitignore  CellData.h  CellDataPlotter.cpp  CellDataPlotter.h  CompositeMapping.cpp  CompositeMapping.h  FaceData.h  Makefile.am  Mapping.h  MyMapping.cpp  MyMapping.h  MyObserver.cpp  (+7 more)
src/peano/: peano.cpp
src/peano4/: Makefile  Makefile.am  UnitTests.cpp  UnitTests.h  build_summary.py  peano.cpp  peano.h
src/smartmpi/: GlobalStatistics.cpp  GlobalStatistics.h  Makefile.am  plot-mpi-wait-times.py  smartmpi.cpp  smartmpi.h
src/tarch/: .gitignore  Assertions.h  Makefile  UnitTests.cpp  UnitTests.h  tarch.cpp  tarch.h
src/unittests/: Makefile  Makefile.am  Makefile.in  main.cpp  supermuc-test.slurm-script
src/visualisation/: Makefile.am  PeanoConverter.cpp  PeanoConverter.h  PeanoDataSet.cpp  PeanoDataSet.h  PeanoMetaFile.cpp  PeanoMetaFile.h  PeanoPatch.cpp  PeanoPatch.h  PeanoPatchData.cpp  PeanoVariable.cpp  convert.cpp
(+3023 files in other folders)
